# spice

./: .coveragerc  .gitignore  .readthedocs.yml  CITATION.cff  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: conda-build.yml  conda-package-build.yml  openalea_ci.yml
conda/: environment.yml  meta.yaml
doc/: Makefile  code_example.rst  conf.py  environment.yml  guide.rst  index.rst  installing.rst  references.rst
doc/examples/plantgl-rad-scene/: PlantRadScene.ipynb  Test_tmin.ipynb  simulation.ini
docs/source/: environment.yml  index.rst
docs/source/examples/plantgl-rad-scene/: Test_tmin.ipynb
examples/python/Evaluation Simulation SEC2/: evaluation.py  evaluation_Nmes.py  evaluation_plant.py  readRes_pointCalibration.py
examples/python/lpy-scene/: lpyScene.py
examples/python/obj-scene/: main.py  mesh.mtl
examples/python/plantgl-rad-scene/: plantglRadScene.py  writeplot.py
models/: gi_test.mtl
src/cpp/include/: integrator.hpp  light.hpp  photon_map.cpp  scene.hpp
src/openalea/spice/: __init__.py  __main__.py  configuration.py  simulator.py  version.py
src/openalea/spice/common/: convert.py
src/openalea/spice/energy/: calculate_energy.py  correct_energy.py
src/openalea/spice/loader/: load_environment.py  load_plant.py  load_sensor.py
src/openalea/spice/reader/: read_rad_geo.py
src/python/: CMakeLists.txt  ext_photonmapping.cpp  ext_photonmapping_nano.cpp
tests/: test_convert.py  test_energy.py  test_load_environment.py  test_load_plant.py  test_math.py  test_photonmap.py  test_properties.py  test_read_rad_geo.py  test_reflection.py  test_render.py  test_scene.py  test_simple_simulation.py  test_tools.py
tests/data/: simulation.ini  simulation_2.ini
