[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "openalea.spice"
authors = [
    {name = "Aurélien Besnier"},
    {name = "Tuan-Minh Nguyen"}
]
description = "Photon mapping with python wrapper"
requires-python = ">=3.9"
keywords = ["simulation", "light", "photon", "ray tracing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
license-files = ["LICEN[CS]E*", "src/cpp/LICENSE"]
version = "1.0.1"
readme = "README.md"
dependencies = [
  "pandas",
  "scipy",
  "matplotlib",
  "openpyxl",
]

[project.urls]
Homepage = "https://github.com/openalea-incubator/photon_mapping"
"Bug Tracker" = "https://github.com/openalea-incubator/photon_mapping/issues"
Discussions = "https://github.com/openalea-incubator/photon_mapping/discussions"
Changelog = "https://github.com/openalea-incubator/photon_mapping/releases"

[project.optional-dependencies]
pybind=["pybind11"]
doc = [
  "sphinx",
  "sphinx-autoapi",
  "sphinx-copybutton",
  "nbsphinx",
  "pydata-sphinx-theme",
  "myst-parser",
  "sphinx-favicon"
]
notebook = [
  "jupyter",
  "ipywidgets"
]
test = [
  "pytest",
  "pytest-cov",
]

[tool.setuptools.package-data]
"*" = ["*.so", "*.dylib", "*.dll"]

[tool.scikit-build]
build-dir="./build/{wheel_tag}"
sdist.include = ["*.so", "*.dylib", "*.dll"]
sdist.exclude = ["*.pyc", "*.pyo"]
logging.level = "WARNING"
build.verbose = true

[tool.scikit-build.cmake]
build-type="Release"
source-dir="."

[tool.scikit-build.wheel]
packages = ["src/openalea"]
