[build-system]
requires = ["scikit-build-core", "nanobind", "setuptools-scm"]
build-backend = "scikit_build_core.build"

[project]
name = "openalea.spice"
authors = [
    {name = "Aurélien Besnier"},
    {name = "Tuan-Minh Nguyen"}
]
description = "Photon mapping with python wrapper"
requires-python = ">=3.9"
keywords = ["simulation", "light", "photon", "ray tracing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
]
license-files = ["LICEN[CS]E*", "src/cpp/LICENSE"]
# version = "1.0.2"
readme = "README.md"
dynamic = ["version"]
dependencies = [
  "pandas",
  "scipy",
  "openpyxl",
]

[project.urls]
Homepage = "https://github.com/openalea/spice"
"Bug Tracker" = "https://github.com/openalea/spice/issues"
Discussions = "https://github.com/openalea/spice/discussions"
Changelog = "https://github.com/openalea/spice/releases"

[project.optional-dependencies]
pybind=["pybind11"]
doc = [
  "sphinx",
  "sphinx-autoapi",
  "sphinx-copybutton",
  "nbsphinx",
  "pydata-sphinx-theme",
  "myst-parser",
  "sphinx-favicon"
]
notebook = [
  "jupyter",
  "ipywidgets"
]
test = [
  "pytest",
  "pytest-cov",
]

[tool.conda.environment]
channels = [
  "openalea3",
  "conda-forge"
]
dependencies = [
    "matplotlib-base",
    "make",
    "ninja",
    "nanobind",
    "cmake",
    "embree",
    "llvm-openmp",
    "tbb",
    "tbb-devel"
]

[tool.setuptools_scm]
# Format version to ease alignment with conda/meta.yaml tag-based versioning
fallback_version = "1.0.3.dev0"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
build-dir="build"
sdist.include = ["*.so", "*.dylib", "*.dll", "*.pyd"]
sdist.exclude = ["*.pyc", "*.pyo"]
logging.level = "WARNING"
build.verbose = true
experimental = true

[tool.scikit-build.editable]
rebuild = true
verbose = true

[tool.scikit-build.cmake]
build-type="Release"
source-dir="."

[tool.scikit-build.wheel.packages]
"openalea/spice" = "src/openalea/spice"
